[gd_scene load_steps=5 format=3 uid="uid://byrkjggsh3t04"]

[ext_resource type="Script" path="res://Code/Cards.gd" id="1_d6pli"]
[ext_resource type="Texture2D" uid="uid://d1p13do4recdi" path="res://Art/Cards/Card_Earth.png" id="2_qxwqf"]
[ext_resource type="Theme" uid="uid://bphefhuacy6kd" path="res://Fonts/MainTheme.tres" id="3_8cunq"]
[ext_resource type="Texture2D" uid="uid://ca7jotfce6p6r" path="res://icon.svg" id="3_twdus"]

[node name="Cardbase" type="Node2D"]
position = Vector2(465, 240)
script = ExtResource("1_d6pli")
metadata/_edit_group_ = true

[node name="ColorRect" type="TextureRect" parent="."]
texture_filter = 1
offset_left = -79.0
offset_right = 89.0
offset_bottom = 290.0
texture = ExtResource("2_qxwqf")
stretch_mode = 6

[node name="description" type="RichTextLabel" parent="."]
offset_left = -44.0
offset_top = 172.0
offset_right = 44.0
offset_bottom = 212.0
theme = ExtResource("3_8cunq")
theme_override_font_sizes/normal_font_size = 12
text = "description"
tab_size = 2

[node name="Image" type="TextureRect" parent="."]
offset_left = -45.0
offset_top = 84.0
offset_right = 63.0
offset_bottom = 170.0
texture = ExtResource("3_twdus")
expand_mode = 1

[node name="ImageType" type="TextureRect" parent="."]
texture_filter = 1
offset_left = 49.0
offset_top = 33.0
offset_right = 83.0
offset_bottom = 70.0
texture = ExtResource("3_twdus")
expand_mode = 1

[node name="AttackLabel" type="Label" parent="."]
offset_left = -61.0
offset_top = 234.0
offset_right = -51.0
offset_bottom = 257.0
theme = ExtResource("3_8cunq")
text = "1
"

[node name="MouseChecker" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -65.0
offset_top = 22.0
offset_right = 73.0
offset_bottom = 269.0
mouse_filter = 1
mouse_force_pass_scroll_events = false
mouse_default_cursor_shape = 2

[node name="HoldTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="Name" type="Label" parent="."]
offset_left = -64.0
offset_top = 37.0
offset_right = 51.0
offset_bottom = 74.0
theme = ExtResource("3_8cunq")
text = "Seraphic Melody 
"
autowrap_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Card EffectHolder" type="Node2D" parent="."]

[connection signal="gui_input" from="MouseChecker" to="." method="_on_mouse_checker_gui_input"]
[connection signal="mouse_entered" from="MouseChecker" to="." method="_on_mouse_checker_mouse_entered"]
[connection signal="mouse_exited" from="MouseChecker" to="." method="_on_mouse_checker_mouse_exited"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
